--- a/index.html
+++ b/index.html
@@ -308,32 +308,31 @@
 
 
 
-                        <div class="mix grid-item banflyer">
-                            <div class="single-img">
-                                <a target="_onblank" href="images/portfolio/evento1large.png">
-                                    <img id="myImg" src="images/portfolio/evento1.jpg" alt="" style="width:100%;max-width:300px">
+                                                <div class="mix grid-item banflyer">
+                                                    <div class="single-img">
+                                                        <a target="_onblank" href="images/portfolio/pretoFront.png">
+                                                            <img id="myImg" src="images/portfolio/pretoFront.jpg" alt="" style="width:100%;max-width:300px">
 
 
-                                    <div id="myModal" class="modal">
+                                                            <div id="myModal" class="modal">
 
 
-                                        <span class="close">&times;</span>
+                                                                <span class="close">&times;</span>
 
 
-                                        <img class="modal-content" id="img01">
-                                </a>
+                                                                <img class="modal-content" id="img01">
+                                                        </a>
 
-                                <div id="caption"></div>
-                                </div>
-                            </div>
+                                                        <div id="caption"></div>
+                                                        </div>
+                                                    </div>
 
-                        </div>
-
-
+                                                </div>
+                      
                         <div class="mix grid-item logos">
                             <div class="single-img">
-                                <a target="_onblank" href="images/portfolio/firelogoLARGE.jpg">
-                                    <img id="myImg" src="images/portfolio/firelogo.jpg" alt="" style="width:100%;max-width:300px">
+                                <a target="_onblank" href="images/portfolio/pretoTras.jpg">
+                                    <img id="myImg" src="images/portfolio/pretoTras.jpg" alt="" style="width:100%;max-width:300px">
 
 
                                     <div id="myModal" class="modal">
@@ -374,7 +373,46 @@
 
 
 
+                        <div class="mix grid-item banflyer">
+                            <div class="single-img">
+                                <a target="_onblank" href="images/portfolio/blueFront.png">
+                                    <img id="myImg" src="images/portfolio/blueFront.jpg" alt="" style="width:100%;max-width:300px">
 
+
+                                    <div id="myModal" class="modal">
+
+
+                                        <span class="close">&times;</span>
+
+
+                                        <img class="modal-content" id="img01">
+                                </a>
+
+                                <div id="caption"></div>
+                                </div>
+                            </div>
+
+                        </div>
+                         <div class="mix grid-item banflyer">
+                                  <div class="single-img">
+                                      <a target="_onblank" href="images/portfolio/blueBack.png">
+                                          <img id="myImg" src="images/portfolio/blueBack.jpg" alt="" style="width:100%;max-width:300px">
+
+
+                                          <div id="myModal" class="modal">
+
+
+                                              <span class="close">&times;</span>
+
+
+                                              <img class="modal-content" id="img01">
+                                      </a>
+
+                                      <div id="caption"></div>
+                                      </div>
+                                  </div>
+
+                              </div>
 
 
                         <div class="mix grid-item banflyer">
@@ -423,6 +461,26 @@
 
                         </div>
 
+                        <div class="mix grid-item banflyer">
+                                 <div class="single-img">
+                                     <a target="_onblank" href="images/portfolio/digitalArt1.png">
+                                         <img id="myImg" src="images/portfolio/digitalArt1.png" alt="" style="width:100%;max-width:300px">
+
+
+                                         <div id="myModal" class="modal">
+
+
+                                             <span class="close">&times;</span>
+
+
+                                             <img class="modal-content" id="img01">
+                                     </a>
+
+                                     <div id="caption"></div>
+                                     </div>
+                                 </div>
+
+                             </div>
 
 
 
@@ -636,6 +694,28 @@
 
                         </div>
 
+
+
+                                                <div class="mix grid-item banflyer">
+                                                    <div class="single-img">
+                                                        <a target="_onblank" href="images/portfolio/digitalArt2.png">
+                                                            <img id="myImg" src="images/portfolio/digitalArt2.png" alt="" style="width:100%;max-width:300px">
+
+
+                                                            <div id="myModal" class="modal">
+
+
+                                                                <span class="close">&times;</span>
+
+
+                                                                <img class="modal-content" id="img01">
+                                                        </a>
+
+                                                        <div id="caption"></div>
+                                                        </div>
+                                                    </div>
+
+                                                </div>
 
 
 
