--- a/index.html
+++ b/index.html
@@ -96,17 +96,19 @@
 
         <div id="sobre" class="containersobre animated fadeInUp">
         <div class="theme-title">
-            <h2>Sobre nós</h2>
+            <h2>Sobre</h2>
         </div>
 
 
         <div class="sobre ">
         <br><br>
-            <p class="head"> A ARCANGELO é uma prestadora de serviços de informática voltada ao desenvolvimento Front End realizando: </p>
+          <p class="head">
+            Sou um desenvolvedor independente que realiza prestação de alguns serviços voltados ao desenvolvimento Front-End e Back-end tais como:
+          </p>
        <br>
         <p>• Desenvolvimento e manutenção de sites e bancos de dados</p> <br>
-    <p>• Diagramação de documentos e criação de illustrações e recursos gráficos</p><br>
-<p>• Customização de sites usando recursos responsivos, e criação de interatividade com animações e outros elementos web</p>
+    <p>• Diagramação de documentos, diagramas e modelos de banco de dados. Criação de illustrações e recursos gráficos</p><br>
+<p>• Criação de sistemas de controle e paineis de administrator. Implementação de scripts PHP e serviços back-end variados.</p>
 <br><p>• Edição de imagens e montagens utilizando Adobe Photoshop</p><br>
 <p>• Criação de flyers, banners e outros recursos para divulgação nas mídias sociais</p>
 </div>
@@ -328,7 +330,7 @@
                                                     </div>
 
                                                 </div>
-                      
+
                         <div class="mix grid-item logos">
                             <div class="single-img">
                                 <a target="_onblank" href="images/portfolio/pretoTras.jpg">
