Major deletion and update text files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>ARCANGELO</title>
+    <title>ARC TEC</title>
 
 
 
@@ -935,11 +935,11 @@
                     <div class="col-lg-3 col-md-3 col-sm-6">
                         <div class="single-about-content">
                             <div class="icon round-border tran3s">
-                                <i class="fa fa-globe" aria-hidden="true"></i>
+                                <i class="fa fa-code" aria-hidden="true"></i>
                             </div><br><br><center>
-                            <p>● Resolução de problemas com o site.</p>
-                            <p>● Criação do domínio web.</p>
-                            <p>● Criação de animações, sliders, e outros, para melhor apresentação do site.</p>
+                            <p>● Criação de Dashboards/Paineis de controle</p>
+                            <p>● Criação de Scripts back-end com uso de PHP/Laravel e outros para usos diversos</p>
+                            <p>● Criação de Sistemas de gerenciamento para plataformas como Emby,IPTV, e outros através de API's</p>
                         </center>
                         <br><br><br>
                         <center>  <a onclick="contato()" href="#" class="more tran3s hvr-bounce-to-right">Entrar em contato</a>
@@ -957,7 +957,7 @@
                     <div class="col-lg-3 col-md-3 col-sm-6 ">
                         <div class="single-about-content ">
                             <div class="icon round-border tran3s ">
-                                <i class="fa fa-code " aria-hidden="true"></i>
+                                <i class="fa fa-desktop " aria-hidden="true"></i>
                             </div>
                             <br><br>
                             <p>● Criação e manutenção de sites com HTML5.</p>
