--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <div class="project-gallery clear-fix">
                             <div class="mix grid-item cart">
                                 <div class="single-img">
-                                    <a target="_onblank" href="https://github/ARCANGEL0/LaravelProject">
+                                    <a target="_onblank" href="https://github.com/ARCANGEL0/LaravelDashboard">
                                         <img id="myImg" src="images/portfolio/laravel.png" alt="" style="width:100%;max-width:300px">
 
 
