--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>ARC TEC</title>
 
 
+    <link rel="image_src" href="images/fav-icon/icon.png">
 
     <link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
 
@@ -791,14 +792,14 @@
                                         <h3>Endereço</h3>
                                     </li>
                                     <li>
-                                      <a target="_blank" href=" https://wa.me/5513988228817 ">
+                                      <a target="_blank" href=" https://wa.me/5513988504778 ">
                                         <div class="icon tran3s round-border p-color-bg"><i class="fa fa-whatsapp" aria-hidden="true"></i></div>
 </a>
                                         <h3>Telefone</h3>
 
                                     </li>
                                     <li>
-                                      <a target="_blank" href="mailto:rick_arcangelo@hotmail.com">  <div class="icon tran3s round-border p-color-bg"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+                                      <a target="_blank" href="mailto:henrique@arcangelo.dev">  <div class="icon tran3s round-border p-color-bg"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 </a>                                        <h3>Email</h3>
                                     </li>
                                     <li>
