--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <title>ARC TEC</title>
 
-
+    <meta property="og:image" content="images/fav-icon/icon.png" /> 
+    <meta property="og:title" content="ARCANGELO" />
+    <meta property="og:description" content=" " /> 
     <link rel="image_src" href="images/fav-icon/icon.png">
 
     <link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
