--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>ARC TEC</title>
+    <title>Arc.UI</title>
 
-    <meta property="og:image" content="images/fav-icon/icon.png" /> 
+    <meta property="og:image" content="favicon.ico" /> 
     <meta property="og:title" content="ARCANGELO" />
     <meta property="og:description" content=" " /> 
     <link rel="image_src" href="images/fav-icon/icon.png">
