--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Arc.UI</title>
 
-    <meta property="og:image" content="favicon.ico" /> 
+    <meta property="og:image" content="images/fav-icon/icon.png" /> 
     <meta property="og:title" content="ARCANGELO" />
     <meta property="og:description" content=" " /> 
     <link rel="image_src" href="images/fav-icon/icon.png">
