--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
                 Desenvolvimento fullstack tais como:
             </p>
             <br>
-            <p>• Desenvolvimento e manutenção de sites e bancos de dados</p> <br>
-            <p>• Diagramação de documentos, diagramas e modelos de banco de dados. Criação de illustrações e recursos
-                gráficos</p><br>
-            <p>• Criação de sistemas de controle e paineis de administrator. Implementação de scripts PHP e serviços
-                back-end variados.</p>
+            <p>• Desenvolvimento e manutenção de sites responsivos e bancos de dados</p> <br>
+            <p>• Elaboração de diagramas e modelos lógicos, de banco de dados, e de casos de uso. Criação de
+                illustrações e recursos
+                gráficos para identidade visual</p><br>
+            <p>• Criação de Sistemas Web e softwares para gerenciamento e controle. Integração de API's e
+                desenvolvimento fullstack de aplicações
+            </p>
             <br>
-            <p>• Edição de imagens e montagens utilizando Adobe Photoshop</p><br>
+            <p>• Edição de imagens,montagens e vídeos</p><br>
             <p>• Criação de flyers, banners e outros recursos para divulgação nas mídias sociais</p>
         </div>
     </div>
@@ -142,9 +144,9 @@
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         </div>
                         <h5><a href="#" class="tran3s">Web Design</a></h5>
-                        <p>Criação de sites com HTML5, CSS.</p>
-                        <P>Estilização e animação do site com Jquery e JS </P>
-                        <p>Manutenção e correção de possíveis bugs no site</p>
+                        <p>Criação de sites responsivos e dinâmicos</p>
+                        <P>Criação de sistemas web, e-commerces e outros paineis de controle </P>
+                        <p>Manutenção e correção de possíveis bugs no website</p>
 
 
                         <a href="#" onclick="web()" class="more tran3s hvr-bounce-to-right">Mais detalhes</a>
@@ -157,11 +159,12 @@
                         <div class="icon round-border tran3s">
                             <i class="fa fa-xing" aria-hidden="true"></i>
                         </div>
-                        <h5><a href="#" onclick="design()" class="tran3s ">Design gráfico</a></h5>
+                        <h5><a href="#" onclick="design()" class="tran3s ">Design digital</a></h5>
                         <p>Desenvolvimento de recursos gráficos diversos como logotipos, flyers, banners, artes digitais
-                            e outros.
-                        <p> Edição e montagem de fotos tais como aplicação de efeitos, alteração de paisagem ou remoção
-                            de objetos/pessoas.</p>
+                            ilustrações e outros.
+                        <p> Edição e montagem de fotos e vídeos com aplicação de efeitos, alteração de paisagem ou
+                            remoção
+                            de objetos/pessoas e afins.</p>
                         </p>
                         <p>
 
@@ -183,9 +186,9 @@
                             <i class="fa fa-database " aria-hidden="true"></i>
                         </div>
                         <h5><a href="#" onclick="web()" class="tran3s ">Gerenciamento de banco de dados</a></h5>
-                        <p>Criação de bancos de dados SQL</p>
-                        <p>Criação de scripts PHP, para atuar server-side com o banco de dados, como no caso de
-                            formulários de login/cadastro.</p>
+                        <p>Desenvolvimento de um banco de dados </p>
+                        <p>Automação dos procedimentos de banco de dados com gatilhos e funções, para realizar ações
+                            após eventos específicos</p>
                         <p>Manutenção e reparo de bugs ou falhas de segurança do banco de dados</p>
                         <a href="#" onclick="web()" class="more tran3s hvr-bounce-to-right ">Mais detalhes</a>
                     </div>
