--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         </div>
                         <h5><a href="#" class="tran3s">Web Design</a></h5>
-                        <p>Criação de sites responsivos e dinâmicos</p>
-                        <P>Criação de sistemas web, e-commerces e outros paineis de controle </P>
-                        <p>Manutenção e correção de possíveis bugs no website</p>
+                        <p>• Criação de sites responsivos e dinâmicos •</p>
+                        <P>• Criação de sistemas web, e-commerces e outros paineis de controle •</P>
+                        <p>• Manutenção e correção de possíveis bugs no website •</p>
 
 
                         <a href="#" onclick="web()" class="more tran3s hvr-bounce-to-right">Mais detalhes</a>
@@ -160,11 +160,12 @@
                             <i class="fa fa-xing" aria-hidden="true"></i>
                         </div>
                         <h5><a href="#" onclick="design()" class="tran3s ">Design digital</a></h5>
-                        <p>Desenvolvimento de recursos gráficos diversos como logotipos, flyers, banners, artes digitais
-                            ilustrações e outros.
-                        <p> Edição e montagem de fotos e vídeos com aplicação de efeitos, alteração de paisagem ou
+                        <p>• Desenvolvimento de recursos gráficos diversos como logotipos, flyers, banners, artes
+                            digitais
+                            ilustrações e outros. •
+                        <p> • Edição e montagem de fotos e vídeos com aplicação de efeitos, alteração de paisagem ou
                             remoção
-                            de objetos/pessoas e afins.</p>
+                            de objetos/pessoas e afins. •</p>
                         </p>
                         <p>
 
@@ -186,10 +187,10 @@
                             <i class="fa fa-database " aria-hidden="true"></i>
                         </div>
                         <h5><a href="#" onclick="web()" class="tran3s ">Gerenciamento de banco de dados</a></h5>
-                        <p>Desenvolvimento de um banco de dados </p>
-                        <p>Automação dos procedimentos de banco de dados com gatilhos e funções, para realizar ações
-                            após eventos específicos</p>
-                        <p>Manutenção e reparo de bugs ou falhas de segurança do banco de dados</p>
+                        <p>• Desenvolvimento de um banco de dados • </p>
+                        <p>• Automação dos procedimentos de banco de dados com gatilhos e funções, para realizar ações
+                            após eventos específicos •</p>
+                        <p>• Manutenção e reparo de bugs ou falhas de segurança do banco de dados •</p>
                         <a href="#" onclick="web()" class="more tran3s hvr-bounce-to-right ">Mais detalhes</a>
                     </div>
 
