--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.instagram.com/arcangelotec/">
+                                <a target="_blank" href="https://www.instagram.com/henry__arcangelo/">
                                     <div class="icon tran3s round-border p-color-bg"><i class="fa fa-instagram"
                                             aria-hidden="true"></i></div>
                                 </a>
