--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <header class="theme-main-header">
             <div class="container">
-                <a href="arcangel0.github.com/ARC_UI" class="logo float-left tran4s"><img src="images/logo/logo1.png"
-                        alt="Logo"></a>
+                <a href="https://arcangel0.github.com/ARC_UI" class="logo float-left tran4s"><img
+                        src="images/logo/logo1.png" alt="Logo"></a>
 
 
                 <nav class="navbar float-right theme-main-menu one-page-menu">
