--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <header class="theme-main-header">
             <div class="container">
-                <a href="https://arcangel0.github.com/ARC_UI" class="logo float-left tran4s"><img
+                <a href="https://arcangel0.github.io/ARC_UI/" class="logo float-left tran4s"><img
                         src="images/logo/logo1.png" alt="Logo"></a>
 
 
