--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <header class="theme-main-header">
             <div class="container">
-                <a href="https://arcangel0.github.io/ARC_UI/" class="logo float-left tran4s"><img
-                        src="images/logo/logo1.png" alt="Logo"></a>
+                <a href="https://arcangel0.github.io/ARC_UI/" class="logo float-left tran4s" style="margin-top:-25px"><img
+                        src="images/logo/logo1.png" alt="Logo" style="ma"></a>
 
 
                 <nav class="navbar float-right theme-main-menu one-page-menu">
@@ -439,7 +439,7 @@
 
     </div>
     <footer>
-        <div class="container ">
+        <div class="container " style="height:10vh">
             <p>Copyright ©
                 <script>
                     document.write(new Date().getFullYear());
