--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <header class="theme-main-header">
             <div class="container">
-                <a href="https://arcangel0.github.io/ARC_UI/" class="logo float-left tran4s" style="margin-top:-25px"><img
-                        src="images/logo/logo1.png" alt="Logo" style="ma"></a>
+                <a href="https://arcangel0.github.io/ARC_UI/" class="logo float-left tran4s" ><img
+                        src="images/logo/logo1.png" alt="Logo" id="logoimage" style="margin-top:-10px;width:60%"></a>
 
 
                 <nav class="navbar float-right theme-main-menu one-page-menu">
