--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Arc.UI</title>
+    <title>HA.Design_</title>
 
     <meta property="og:image" content="images/fav-icon/icon.png" />
     <meta property="og:title" content="ARCANGELO" />
@@ -38,7 +38,7 @@
 
         <header class="theme-main-header">
             <div class="container">
-                <a href="https://arcangel0.github.io/ARC_UI/" class="logo float-left tran4s" ><img
+                <a href="https://arcangel0.github.io/ARC_UI/" class="logo float-left tran4s"><img
                         src="images/logo/logo1.png" alt="Logo" id="logoimage" style="margin-top:-10px;width:60%"></a>
 
 
