--- a/EN-US/index.html
+++ b/EN-US/index.html
@@ -106,12 +106,13 @@
                             <li><a href="#" onclick="contato()">Contact</a></li>
                              <li data-mdb-toggle="collapse" data-mdb-target="#idiomas" aria-expanded="false" class="language"> <a href="#" > 
 
-                                  <img src="https://purecatamphetamine.github.io/country-flag-icons/3x2/US.svg" alt=""> EN-US</a>
+                                  <img class="us" src="https://purecatamphetamine.github.io/country-flag-icons/3x2/US.svg" alt=""> EN-US</a>
 
                                 <ul id="idiomas" class="sub-menu language collapse">
-                                    <li class=><a href="/"  class="tran3s">
+                                   
+                                    <li id="ptbr"><a   class="tran3s">
 
-                                 <img src="https://purecatamphetamine.github.io/country-flag-icons/3x2/BR.svg" alt=""> PT-BR</a>
+                                 <img  class="br" src="https://purecatamphetamine.github.io/country-flag-icons/3x2/BR.svg" alt=""> PT-BR</a>
                                     </li>
                                   
 
