--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@
                             <li><a href="#" onclick="portfolio()">Portfólio</a></li>
 
                             <li><a href="#" onclick="contato()">Contato</a></li>
-                             <li data-mdb-toggle="collapse" data-mdb-target="#idiomas" aria-expanded="false" class="language"> <a href="#" > <img src="https://purecatamphetamine.github.io/country-flag-icons/3x2/BR.svg" alt=""> PT-BR</a>
+                             <li data-mdb-toggle="collapse" data-mdb-target="#idiomas" aria-expanded="false" class="language"> <a href="#" >
+                              <img class="br" src="https://purecatamphetamine.github.io/country-flag-icons/3x2/BR.svg" alt=""> PT-BR</a>
 
                                 <ul id="idiomas" class="sub-menu language collapse">
-                                    <li  class=><a  href="EN-US/" class="tran3s">
+                                    <li id="enus" ><a class="tran3s">
 
-                                     <img href="EN-US/" src="https://purecatamphetamine.github.io/country-flag-icons/3x2/US.svg" alt=""> EN-US</a>
+                                     <img class="us"src="https://purecatamphetamine.github.io/country-flag-icons/3x2/US.svg"  alt=""> EN-US</a>
                                     </li>
                                   
 
