--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <title>HA Design_</title>
 
-    <meta property="og:image" content="images/fav-icon/icon.png" />
-    <meta property="og:title" content="ARCANGELO" />
+    <meta property="og:image" content="images/fav-icon/fav.ico" />
+    <meta property="og:title" content="HA Design" />
     <meta property="og:description" content=" " />
-    <link rel="image_src" href="images/fav-icon/icon.png">
+    <link rel="image_src" sizes="28x28" href="images/fav-icon/fav.ico">
 
-    <link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
+    <link rel="icon" type="image/png" sizes="16x16 32x32" href="images/fav-icon/fav.ico">
 
   
 
@@ -336,7 +336,7 @@
                 <div class=" right-side">
 
                     <h2>Entre em contato!</h2>
-                    <form id="mandaremail">
+                    <form action="#" id="mandaremail">
 
 
                         <div class="form-group">
