--- a/EN-US/index.html
+++ b/EN-US/index.html
@@ -11,8 +11,8 @@
     <title>HA Design_</title>
 
     <meta property="og:image" content="../images/fav-icon/icon.png" />
-    <meta property="og:title" content="ARCANGELO" />
-    <meta property="og:description" content=" " />
+    <meta property="og:title" content="HA Design" />
+    <meta property="og:description" content="Digital solutions to facilitate and expand your business providing 100% professional services in Design and Development of Mobile Apps, Responsive websites, Softwares and Management solutions" />
     <link rel="image_src" href="../images/fav-icon/icon.png">
 
     <link rel="icon" type="image/png" sizes="56x56" href="../images/fav-icon/icon.png">
@@ -163,7 +163,7 @@
             </p>
             <br>
             <p>
-            • Development and maintenance of website, databases and web applications
+            • Development and maintenance of responsive websites, databases, API's and dashboards/admin panels
         </p> <br>
 
             <p>• Creation of visual identity with brand, logos, banners, cards, flyers, digital arts and posts
