--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 
     <meta property="og:image" content="images/fav-icon/fav.ico" />
     <meta property="og:title" content="HA Design" />
-    <meta property="og:description" content=" " />
+    <meta property="og:description" content="Soluções digitais para facilitar e expandir seu negócio fornecendo serviços 100% profissionais em Design e Desenvolvimento de Sites, Aplicativos, Softwares e Soluções para gerenciamento" />
     <link rel="image_src" sizes="28x28" href="images/fav-icon/fav.ico">
 
     <link rel="icon" type="image/png" sizes="16x16 32x32" href="images/fav-icon/fav.ico">
@@ -160,7 +160,7 @@
                 Desenvolvimento de software:
             </p>
             <br>
-            <p>• Desenvolvimento e manutenção de site, bancos de dados e aplicações web</p> <br>
+            <p>• Desenvolvimento e manutenção de sites responsivos, bancos de dados, API's e sistemas web</p> <br>
 
             <p>• Criação de identidade visual com marca, logotipos, banners, cartões, flyers, artes digitais e posts
                 para redes sociais</p><br>
@@ -168,7 +168,8 @@
             <p>• Criação de aplicativos e softwares sob demanda.
             </p>
             <br>
-            <p>• Conserto e manutenção de computadores e periféricos. Backup, formatação e remoção de vírus</p><br>
+            <p>• Conserto e manutenção de computadores. Backup, formatação e remoção de vírus</p>
+            <br>
             <p>• Correção de aplicações e sites de bugs ou vulnerabilidades presentes </p>
         </div>
     </div>
