--- a/EN-US/index.html
+++ b/EN-US/index.html
@@ -299,7 +299,7 @@
                                 <div class="icon tran3s round-border p-color-bg"><i class="fa fa-whatsapp"
                                         aria-hidden="true"></i></div>
                             </a>
-                            <h3>Cellphone</h3>
+                            <h3>Whatsapp</h3>
 
                         </li>
                         <li>
