--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ type="video/mp4" />
 
     </div>
     <footer>
-        <div class="container " style="height:10vh">
+        <div class=" " style="height:10vh">
             <br>
             <p>Copyright ©
                 <script>
