--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <ul>
 
                         <li>
-                            <a target="_blank" href=" https://wa.me/5513988552976 ">
+                            <a target="_blank" href=" https://wa.me/351927285125 ">
                                 <div class="icon tran3s round-border p-color-bg"><i class="fa fa-whatsapp"
                                         aria-hidden="true"></i></div>
                             </a>
@@ -302,7 +302,7 @@
 
                         </li>
                         <li>
-                            <a target="_blank" href="mailto:henrique@arcangelo.dev">
+                            <a target="_blank" href="mailto:henry.arcangello@gmail.com">
                                 <div class="icon tran3s round-border p-color-bg"><i class="fa fa-envelope-o"
                                         aria-hidden="true"></i></div>
                             </a>
@@ -315,16 +315,9 @@
                             </a>
                             <h3>Github</h3>
                         </li>
+                  
                         <li>
-                            <a target="_blank" href="https://www.facebook.com/henryyssn">
-                                <div class="icon tran3s round-border p-color-bg"><i class="fa fa-facebook"
-                                        aria-hidden="true"></i></div>
-                            </a>
-                            <h3>Facebook</h3>
-
-                        </li>
-                        <li>
-                            <a target="_blank" href="https://www.instagram.com/henry__arcangelo/">
+                            <a target="_blank" href="https://www.instagram.com/h.arcangelo/">
                                 <div class="icon tran3s round-border p-color-bg"><i class="fa fa-instagram"
                                         aria-hidden="true"></i></div>
                             </a>
